--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
+
 <html>
+
     <head>
+
         <meta charset = "UTF-8">
+
         <title>Marenol : "Where there no one will recommend this to the others"</title>
+
     </head>
+
     <body>
+
         <h1>What is Marenol?</h1>
+
         <p>Marenol is a song,which made by Mr.LeaF.However,in Chinese words,that's heard like dirty words(Actually).</p>
+
         <p>That is why I created this web.it appears that we will let the worlds of the dirty words be saved.</p>
+
         <p>As some reasons we all know,we shouldn't say any dirty words on the Internet,but That isn't the reason where the "words" die.</p>
+
         <p>Saved on the Internet is an wonderful Idea.Something on Internet won't die cuz I'm die.</p>
+
         <p>This baby(Project) is still climbing across the storm cuz I'm a middle school student.</p>
+
         <p>But That isn't mean I won't care about this web.I'm just learning the JS,CSS,HTML.</p>
+
         <p>I think,this page will be better than in the past.</p>
-        <p>Jerry_Awq 2021.10.5</p>    
+
+        <p>Jerry_Awq 2021.10.5</p>
+        <div id="footer" class="mar-t50">
+            <a href="https://space.bilibili.com/312232735">创作者On Bilibili</a>
+            
+
     </body>
+
 </html>
+
