--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,12 @@
 <!DOCTYPE HTML>
 <head>
+    <meta charset="UTF-8">
     <title>Marenol:Search</title>
     <style>
-      
+      p{
+          font-size:30px;
+          bgcolor:white;
+        }</p>
       </style>
 </head>
 <body>
